@@ -2064,3 +2064,5 @@ Set/clear/rename_fields=Set/clear/rename_fields
 Rename_field_to\:=Rename_field_to_\:
 Move_contents_of_a_field_into_a_field_with_a_different_name=Move_contents_of_a_field_into_a_field_with_a_different_name
 You_can_only_rename_one_field_at_a_time=You_can_only_rename_one_field_at_a_time
+
+Remove_all_broken_links=Remove_all_broken_links
