@@ -1,6 +1,10 @@
 2.5?
     - Modified ISI importer so the words "of", "and" and "the" will not be capitalized in the title,
       journal or publisher fields.
+    - When adding new local file link, browse dialog now appears immediately when opening file link
+      editor, saving one mouse click.
+    - Added "Remove all broken links" option in the resolver dialog for broken links when
+      synchronizing file links.
     - Added rename option to Set/clear field dialog, to move contents from one field to another.
     - Added Back and Forward actions, for switching between recently edited BibTeX entries.
     - Added option under "Entry table" to designate fields as numeric for sorting purposes.
